--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,8 +42,7 @@ jobs:
           path: build
       - name: ZIP Assets
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run:
-          zip -r build.zip ./build
+        run: zip -r build.zip ./build
           zip -r coverage.zip ./coverage
       - name: Create a Release
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
