--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,4 +63,4 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: npx codecov
         env:
-          CODECOV_TOKEN: ${{ secretes.CODECOV_TOKEN }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
