--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
 name: CI
 on:
   pull_request:
-    branches: [develop, main22]
+    branches: [develop, main]
   push:
-    branches: [develop, main22]
+    branches: [develop, main]
 
 jobs:
   build:
