--- a/.github/actions/issue/action.yml
+++ b/.github/actions/issue/action.yml
@@ -1,5 +1,6 @@
 name: "Open GitHub Issue"
 author: bsnyder
+description: "Opens a github issue"
 inputs:
   token:
     description: "GitHub Token"
@@ -14,6 +15,6 @@ inputs:
 outputs:
   issue: # id of output
     description:: "The issue object as a json string"
-  runs:
-    using: "node12"
-    main: "dist/index.js"
+runs:
+  using: "node12"
+  main: "dist/index.js"
