--- a/.github/actions/issue/action.yaml
+++ b/.github/actions/issue/action.yaml
@@ -1,9 +1,9 @@
-name: "Open GitHub Issue"
-author: bsnyder
+name: "Open Github Issue"
+author: alialaa
 description: "Opens a github issue"
 inputs:
   token:
-    description: "GitHub Token"
+    description: "Github Token"
     required: true
   title:
     description: "Issue Title"
@@ -14,7 +14,7 @@ inputs:
     description: "Issue Assignees"
 outputs:
   issue: # id of output
-    description:: "The issue object as a json string"
+    description: "The issue object as a json string"
 runs:
   using: "node12"
   main: "dist/index.js"
